--- a/events/SuperMario.css
+++ b/events/SuperMario.css
@@ -6,6 +6,7 @@ html{
     height: 100%;
     background: url("./bg.jpg") 100% 100% no-repeat;
     background-size: cover;
+    background-repeat: repeat-x;
 }
 body{
     min-height: 100%;
@@ -17,8 +18,9 @@ img{
     display: block;
     position: absolute;
     left:40%;
-    bottom: 17%;
+    bottom: 20%;
 }
 .img{
     width: 130px;
+    margin-left:-20px;
 }
